No need for modifiable list
Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>